src/test/deca/syntax/invalid/test37_class_decl.deca
// Description:
//    Programme testant les declarations de classes.
//	  Etape(s) : A
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//	  Contextuellement : NON
//
// Resultats:
// 	  test_lex : pas d'erreur
//    test_synt : erreur ligne 15 : no viable alternative at input 'private'
//
// Historique:
//    cree le 17/01/2020

private class A {
}